--- a/app/src/main/res/layout/activity_add_expense.xml
+++ b/app/src/main/res/layout/activity_add_expense.xml
@@ -5,107 +5,77 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="10dp"
-
     tools:context=".AddExpenseActivity">
 
-
     <androidx.cardview.widget.CardView
+        android:layout_margin="10dp"
+        app:contentPadding="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:contentPadding="5dp">
-
+        android:layout_height="wrap_content">
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-        <LinearLayout
-            android:layout_width="match_parent"
             android:orientation="vertical"
-
-            android:layout_height="wrap_content">
-
-            <TextView
-
-
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Amount"
-                android:textColor="@color/teal_200"
-                ></TextView>
-            <EditText
-                android:id="@+id/amount"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="number"
-                />
-            <RadioGroup
-                android:id="@+id/typeRadio"
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <RadioButton
-                    android:id="@+id/incomeRadio"
-                    android:layout_width="120dp"
-                    android:layout_height="wrap_content"
-                    android:text="Income"/>
-
-                <RadioButton
-                    android:id="@+id/expenseRadio"
-                    android:layout_width="120dp"
-                    android:layout_height="wrap_content"
-                    android:text="Expense"/>
-
-            </RadioGroup>
-
-
-
-        </LinearLayout>
-
-        <LinearLayout
             android:layout_width="match_parent"
-            android:orientation="vertical"
-
             android:layout_height="wrap_content">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Notes"
-                android:textColor="@color/teal_200"
-                ></TextView>
-            <EditText
-                android:id="@+id/notes"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="text"
-                />
-
-
-
-        </LinearLayout>
-        <LinearLayout
-                android:layout_width="match_parent"
+            <LinearLayout
                 android:orientation="vertical"
-
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-
                 <TextView
+                    android:textColor="@color/teal_700"
+                    android:text="Amount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+                <EditText
+                    android:id="@+id/amount"
+                    android:inputType="number"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+                <RadioGroup
+                    android:id="@+id/typeRadioGroup"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <RadioButton
+                        android:id="@+id/incomeRadio"
+                        android:text="Income"
+                        android:layout_width="120dp"
+                        android:layout_height="wrap_content"/>
+                    <RadioButton
+                        android:id="@+id/expenseRadio"
+                        android:text="Expense"
+                        android:layout_width="120dp"
+                        android:layout_height="wrap_content"/>
+                </RadioGroup>
+            </LinearLayout>
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:textColor="@color/teal_700"
+                    android:text="Note"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+                <EditText
+                    android:id="@+id/note"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:textColor="@color/teal_700"
                     android:text="Category"
-                    android:textColor="@color/teal_200"
-                    ></TextView>
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
                 <EditText
                     android:id="@+id/category"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-
-                    />
-
-
-
+                    android:layout_height="wrap_content"/>
             </LinearLayout>
         </LinearLayout>
-
     </androidx.cardview.widget.CardView>
+
 </LinearLayout>
