--- a/app/src/main/res/layout/expense_row.xml
+++ b/app/src/main/res/layout/expense_row.xml
@@ -4,11 +4,9 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:contentPadding="10dp"
-    android:layout_margin="5dp"
-    android:id="@+id/main_container">
-
+    android:layout_margin="5dp">
     <RelativeLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <LinearLayout
             android:layout_centerVertical="true"
@@ -16,54 +14,47 @@
             android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
-
             <TextView
                 android:id="@+id/note"
                 android:textColor="@color/black"
                 android:textSize="18sp"
+                android:text="Note"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Note" />
+                android:layout_height="wrap_content"/>
             <TextView
-                android:id="@+id/categoryToDisplay"
+                android:id="@+id/category"
                 android:textSize="16sp"
+                android:text="category"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Category" />
+                android:layout_height="wrap_content"/>
             <TextView
                 android:id="@+id/date"
+                android:text="date"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Date" />
-
+                android:layout_height="wrap_content"/>
         </LinearLayout>
         <LinearLayout
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
-            android:orientation="horizontal"
             android:layout_width="wrap_content"
+            android:orientation="horizontal"
             android:layout_height="wrap_content">
             <TextView
-                android:id="@+id/amountToDisplay"
-                android:textColor="@color/teal_700"
-                android:textSize="18sp"
-                android:text="100"
+                android:id="@+id/amount"
                 android:textStyle="bold"
+                android:textSize="18sp"
+                android:textColor="@color/teal_700"
+                android:text="100"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <TextView
-                android:textColor="@color/teal_700"
-                android:textSize="18sp"
-                android:text=" INR"
                 android:textStyle="bold"
+                android:textSize="18sp"
+                android:textColor="@color/teal_700"
+                android:text=" INR"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
-
-
         </LinearLayout>
-
-
     </RelativeLayout>
-
 
 </androidx.cardview.widget.CardView>
