--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,20 +10,23 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <androidx.cardview.widget.CardView
-            android:layout_margin="5dp"
             android:layout_width="match_parent"
-            android:layout_height="300dp">
+            android:layout_height="250dp"
+            android:layout_margin="5dp">
+
             <com.github.mikephil.charting.charts.PieChart
-                android:layout_width="match_parent"
                 android:id="@+id/pieChart"
-                android:layout_height="match_parent"/>
+                android:layout_width="match_parent"
+                android:layout_height="248dp" />
         </androidx.cardview.widget.CardView>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler"
-            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="292dp"
+            android:layout_marginTop="10dp" />
     </LinearLayout>
     <LinearLayout
         android:weightSum="2"
@@ -43,6 +46,7 @@
             android:layout_height="wrap_content"/>
         <TextView
             android:id="@+id/addExpense"
+            android:layout_marginBottom="5dp"
             android:layout_marginLeft="10dp"
             android:textColor="@color/white"
             android:background="@color/black"
