--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,28 +30,19 @@
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <TextView
             android:id="@+id/addIncome"
-            android:background="@color/black"
-            android:text="Add Income"
-            android:layout_weight="1"
-            android:textColor="@color/white"
-            android:gravity="center"
-            android:padding="15dp"
+            android:layout_width="357dp"
+            android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:id="@+id/addExpense"
-            android:layout_marginLeft="10dp"
-            android:textColor="@color/white"
+            android:layout_weight="1"
             android:background="@color/black"
             android:gravity="center"
-            android:text="Add Expense"
-            android:layout_weight="1"
             android:padding="15dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:text="Add Transaction"
+            android:textColor="@color/white" />
+
     </LinearLayout>
 
 
