--- a/app/src/main/res/layout/expense_row.xml
+++ b/app/src/main/res/layout/expense_row.xml
@@ -12,7 +12,7 @@
         <LinearLayout
             android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
-            android:orientation="vertical"
+            android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
@@ -20,22 +20,22 @@
                 android:id="@+id/note"
                 android:textColor="@color/black"
                 android:textSize="18sp"
-                android:text="Note"
+                android:text="Note "
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
             <TextView
                 android:id="@+id/category"
                 android:textSize="16sp"
-                android:text="Category"
+                android:text="  Category"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
             <TextView
                 android:id="@+id/date"
-                android:text="Date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                />
 
         </LinearLayout>
 
